# py-cryptopro

./: .cursorignore  .gitignore  Dockerfile  README.md  README_NEW.md  docker-compose.yml  justfile  pyproject.toml
.cursor/rules/: htmx.mdc  tailwind-alphine.mdc
app/: config.py  constants.py  containers.py  dependencies.py  endpoints_api.py  endpoints_html.py  install_crl.sh  loggers.py  main.py  middleware.py  schemas.py  services.py  utils.py
app/static/js/: cadesplugin.js  hash.js  signfile.js  signtxt.js  verifyfile.js  verifytxt.js  verifyxml.js
app/static/js/cadesplugin/: async_code.js  cadesplugin_api.js  highlight.js  lights.js  utils.js
app/templates/: about.html  base.html  cadesplugin.html  certificate.html  certificates.html  certs_import.html  hash.html  home.html  signfile.html  signtxt.html  verifyfile.html  verifytxt.html  verifyxml.html
app/templates/includes/: menu.html  settings.html
tests/: conftest.py  test_certificates.py  test_hash.py  test_sing.py  test_systeminfo.py  test_utils.py  test_verify.py
tests/files/: test.cer  test.xml
