[project]
authors = [
    {name = "ChubAV", email = "chub.aleksandr.v@gmail.com"},
]
requires-python = "<4.0,>=3.13"
dependencies = [
    "fastapi[all]<1.0.0,>=0.111.0",
    "aiofiles<25.0.0,>=24.1.0",
    "injector<1.0.0,>=0.22.0",
    "jinja2<4.0.0,>=3.1.4",
    "ruff>=0.11.9",
]
name = "py-cryptopro"
version = "0.1.0"
description = ""
readme = "README.md"

[dependency-groups]
dev = [
    "httpx>=0.28.1",
    "pytest>=8.3.5",
    "pytest-ordering>=0.6",
]
